samples/_failures_safe/1761346014_172915_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8635a90b.c:123:1: error: expected declaration specifiers or ‘...’ at end of input
  123 | int transpose_matrix(const Matrix* m,
      | ^~~
